--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body{
+    display: flex;
+    align-items: center;
     background-image: radial-gradient(rgb(217, 226, 167),rgb(180, 168, 177),rgb(133, 208, 218));
 }
 .container{
